seccion de noticias

--- a/index.html
+++ b/index.html
@@ -66,8 +66,35 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-</div>
 
+</div style>
+
+<!-- div para seccion de noticias -->
+
+<div style="padding-top: 10%">
+    <div class="nostyle"> <!-- añadir padding a todos los div -->
+        <h2>Últimas Noticias</h2>
+    </div>
+
+    <div class="noticias" >
+    <div class="auto"> <!-- div de primera noticia-->
+
+        <h3><a href="">Animal Crossing versión 2.8</a></h3>
+        <div><img src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+        <p >El juego en el que todos piensan </p>
+
+    </div>
+
+    <div class="auto2"> <!-- div de primera noticia-->
+
+        <h3><a href="">Animal2 Crossing versión 2.8</a></h3>
+        <div><img src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+        <p>El juego en el que todos piensan </p><!--cambios-->
+
+    </div>
+
+    </div>
+</div>
 
 </body>
 </html>
