--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="image/overwatch-ed.jpg" height="430" Second slide ">
+            <img class="d-block w-100" src="image/overwatch-ed.jpg"  height="430" alt="Second slide ">
             <div class="carousel-caption d-none d-md-block">
 
             </div>
