cambios en estilos nuevas fotos y reestructuracion de la pag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="css1.css">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="css1.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -52,7 +52,7 @@
         <div class="carousel-item">
             <img class="d-block w-100" src="image/callof.jpg"  height="430" width="1000" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-                <h3>Call Of Dutty : Por Fin ha vuelto</h3>
+                <h3>Call Of Duty : Por fin ha vuelto</h3>
 
             </div>
         </div>
@@ -70,7 +70,7 @@
 </div style>
 
 <!-- div para seccion de noticias -->
-
+<div id="principal">
 <div style="padding-top: 10%">
     <div class="nostyle"> <!-- añadir padding a todos los div -->
         <h2>Últimas Noticias</h2>
@@ -79,22 +79,115 @@
     <div class="noticias" >
     <div class="auto"> <!-- div de primera noticia-->
 
-        <h3><a href="">Animal Crossing versión 2.8</a></h3>
-        <div><img src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+        <h3><a href="">Animal Crossing</a></h3>
+        <div><img class="tamg" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
         <p >El juego en el que todos piensan </p>
 
     </div>
 
     <div class="auto2"> <!-- div de primera noticia-->
 
-        <h3><a href="">Animal2 Crossing versión 2.8</a></h3>
-        <div><img src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+        <h3><a href="">Battlefield</a></h3>
+        <img class="tamg" src="image/call.jpg" alt="foto de animal crossing"><!--div para  imagen -->
         <p>El juego en el que todos piensan </p><!--cambios-->
 
     </div>
 
+
+
+
+
+    </div>
+
+    <div class="noticias2">
+
+        <div class="auto1"> <!-- div de primera noticia-->
+
+            <h3><a class="tam" href="">Animal2 Crossing versión 2.8</a></h3>
+            <div><img class="tam" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+            <p>El juego en el que todos piensan </p><!--cambios-->
+
+        </div>
+
+        <div  class="auto1"> <!-- div de primera noticia-->
+
+            <h3><a class="tam" href="">Pokemon Cristal</a></h3>
+            <div><img class="tam" src="image/pokemon.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+            <p>El juego en el que todos piensan </p><!--cambios-->
+
+        </div>
+
+        <div class="auto1"> <!-- div de primera noticia-->
+
+            <h3><a class="tam" href="">Final Fantasy</a></h3>
+            <div><img class="tam" src="image/muñeco.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+            <p>El juego en el que todos piensan </p><!--cambios-->
+
+        </div>
+
     </div>
 </div>
 
+
+
+<!-- div para seccion de noticias -->
+
+<div style="padding-top: 10%">
+    <div class="nostyle"> <!-- añadir padding a todos los div -->
+        <h2>Análisis Destacados</h2>
+    </div>
+
+    <div class="noticias" >
+        <div class="auto"> <!-- div de primera noticia-->
+
+            <h3><a href="">Animal Crossing versión 2.8</a></h3>
+            <div><img src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+            <p >El juego en el que todos piensan </p>
+
+        </div>
+
+        <div class="auto2"> <!-- div de primera noticia-->
+
+            <h3><a href="">Animal2 Crossing versión 2.8</a></h3>
+            <div><img src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+            <p>El juego en el que todos piensan </p><!--cambios-->
+
+        </div>
+
+
+
+
+
+    </div>
+
+    <div class="noticias2">
+
+        <div class="auto1"> <!-- div analisis-->
+
+            <h3><a class="tam" href="">Animal2 Crossing versión 2.8</a></h3>
+            <div><img class="tam" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+            <p>El juego en el que todos piensan </p><!--cambios-->
+
+        </div>
+
+        <div id="centro" class="auto1"> <!-- div de primera noticia-->
+
+            <h3><a class="tam" href="">Animal2 Crossing versión 2.8</a></h3>
+            <div><img class="tam" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+            <p>El juego en el que todos piensan </p><!--cambios-->
+
+        </div>
+
+        <div class="auto1"> <!-- div de primera noticia-->
+
+            <h3><a class="tam" href="">Animal2 Crossing versión 2.8</a></h3>
+            <div><img class="tam" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
+            <p>El juego en el que todos piensan </p><!--cambios-->
+
+        </div>
+
+    </div>
+</div>
+</div>
 </body>
 </html>
