--- a/index.html
+++ b/index.html
@@ -4,35 +4,42 @@
     <meta charset="UTF-8">
     <title>Home</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="css1.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+            integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+            integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+            crossorigin="anonymous"></script>
     <style>
 
 
     </style>
 </head>
 <body>
-<ul  class="nav">
+<ul class="nav">
     <li><a href="">PS4</a></li>
     <li><a href="">XBOX</a></li>
     <li><a href="">PC</a></li>
     <li><a href="">FORO</a></li>
 
 </ul>
-<div id="nav2" >
-<ul class="nav">
-    <li><a href="">Noticias</a></li>
-    <li><a href="">Analisis</a></li>
-    <li><a href="">Ranking</a></li>
-    <li><a href="">Guias</a></li>
-    <li><a href="">Eventos</a></li>
-    <li><a href="">Logros</a></li>
-    <li><a href="">Trucos</a></li>
+<div id="nav2">
+    <ul class="nav">
+        <li><a href="">Noticias</a></li>
+        <li><a href="">Analisis</a></li>
+        <li><a href="">Ranking</a></li>
+        <li><a href="">Guias</a></li>
+        <li><a href="">Eventos</a></li>
+        <li><a href="">Logros</a></li>
+        <li><a href="">Trucos</a></li>
 
-</ul>
+    </ul>
 </div>
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="margin-top: 8%">
@@ -44,13 +51,13 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="image/overwatch-ed.jpg"  height="430" alt="Second slide ">
+            <img class="d-block w-100" src="image/overwatch-ed.jpg" height="430" alt="Second slide ">
             <div class="carousel-caption d-none d-md-block">
 
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="image/callof.jpg"  height="430" width="1000" alt="Third slide">
+            <img class="d-block w-100" src="image/callof.jpg" height="430" width="1000" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
                 <h3>Call Of Duty : Por fin ha vuelto</h3>
 
@@ -67,127 +74,164 @@
     </a>
 </div>
 
-</div style>
+</div>
 
 <!-- div para seccion de noticias -->
-<div id="principal">
-<div style="padding-top: 10%">
-    <div class="nostyle"> <!-- añadir padding a todos los div -->
-        <h2>Últimas Noticias</h2>
+<div id="contenido">
+    <div id="principal">
+        <div>
+            <div class="nostyle"> <!-- añadir padding a todos los div -->
+                <h2 style="padding-bottom: 3%">Últimas Noticias</h2>
+            </div>
+
+            <div class="noticias">
+                <div id="izquierda">
+                    <div class="auto"> <!-- div de primera noticia-->
+
+                        <h3><a href="">Disney compra 21 fox</a></h3>
+                        <div><img class="tamg" src="image/disney.jpg" alt="foto de animal crossing"></div>
+                        <!--div para  imagen -->
+                        <p>El juego en el que todos piensan </p>
+
+                    </div>
+
+                    <div class="auto2">
+
+                        <h3><a href="">Battlefield</a></h3>
+                        <img class="tamg" src="image/call.jpg" alt="foto de animal crossing"><!--div para  imagen -->
+                        <p>El juego en el que todos piensan </p>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="noticias2">
+
+                <div class="auto1"> <!-- div de primera noticia-->
+
+                    <h3><a class="tam" href="">Civil Aviones</a></h3>
+                    <div><img class="tam" src="image/avion.jpg" alt="foto de animal crossing"></div>
+                    <!--div para  imagen -->
+                    <p>El juego en el que todos piensan </p><!--cambios-->
+
+                </div>
+
+                <div class="auto1"> <!-- div de primera noticia-->
+
+                    <h3><a class="tam" href="">Pokemon Cristal</a></h3>
+                    <div><img class="tam" src="image/pokemon.jpg" alt="foto de animal crossing"></div>
+                    <!--div para  imagen -->
+                    <p>El juego en el que todos piensan </p><!--cambios-->
+
+                </div>
+
+                <div class="auto1"> <!-- div de primera noticia-->
+
+                    <h3><a class="tam" href="">Final Fantasy</a></h3>
+                    <div><img class="tam" src="image/muñeco.jpg" alt="foto de animal crossing"></div>
+                    <!--div para  imagen -->
+                    <p>El juego en el que todos piensan </p><!--cambios-->
+
+                </div>
+
+            </div>
+        </div>
+
+
+        <!-- div para seccion de noticias -->
+
+        <div style="padding-top: 5%">
+            <div class="nostyle"> <!-- añadir padding a todos los div -->
+                <h2 style="padding-bottom: 2%">Análisis Destacados</h2>
+            </div>
+
+            <div class="noticias">
+                <div class="auto"> <!-- div de primera noticia-->
+
+                    <h3><a href="">Animal Crossing</a></h3>
+                    <div><img class="tamg" src="image/animal.jpg" alt="foto de animal crossing"></div>
+                    <!--div para  imagen -->
+                    <p>El juego en el que todos piensan </p>
+
+                </div>
+
+                <div class="auto2">
+
+                    <h3><a href="">Battlefield</a></h3>
+                    <img class="tamg" src="image/teken.jpg" alt="foto de animal crossing"><!--div para  imagen -->
+                    <p>El juego en el que todos piensan </p>
+                </div>
+
+
+            </div>
+
+            <div class="noticias2">
+
+                <div class="auto1"> <!-- div de primera noticia-->
+
+                    <h3><a class="tam" href="">The Hunter</a></h3>
+                    <div><img class="tam" src="image/hunter.jpg" alt="foto de animal crossing"></div>
+                    <!--div para  imagen -->
+
+
+                </div>
+
+                <div class="auto1"> <!-- div de primera noticia-->
+
+                    <h3><a class="tam" href="">Pokemon Cristal</a></h3>
+                    <div><img class="tam" src="image/pubg.jpg" alt="foto de animal crossing"></div>
+                    <!--div para  imagen -->
+
+
+                </div>
+
+                <div class="auto1"> <!-- div de primera noticia-->
+
+                    <h3><a class="tam" href="">Final Fantasy</a></h3>
+                    <div><img class="tam" src="image/futurista.jpg" alt="foto de animal crossing"></div>
+                    <!--div para  imagen -->
+
+
+                </div>
+
+            </div>
+        </div>
     </div>
 
-    <div class="noticias" >
-    <div class="auto"> <!-- div de primera noticia-->
+    <div><!--lateral-->
 
-        <h3><a href="">Animal Crossing</a></h3>
-        <div><img class="tamg" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
-        <p >El juego en el que todos piensan </p>
+        <div class="auto2" id="lateral">
+            <div class="auto2">
+                <h4> Ultimos Trucos</h4>
+                <img src="image/pubg.jpg" alt="imagen de pubg">
+                <p>Desbloquear rifle </p>
+            </div>
 
-    </div>
+            <div class="auto2">
+                <img src="image/bluedragon.jpg" alt="blue dragon">
+                <p>Como desbloquear el pico de oro</p>
+            </div>
 
-    <div class="auto2"> <!-- div de primera noticia-->
+            <div class="auto2">
 
-        <h3><a href="">Battlefield</a></h3>
-        <img class="tamg" src="image/call.jpg" alt="foto de animal crossing"><!--div para  imagen -->
-        <p>El juego en el que todos piensan </p><!--cambios-->
+                <h4 >Ultimos Logros</h4>
 
-    </div>
-
-
+                <div>
+                    
+                </div>
 
 
-
-    </div>
-
-    <div class="noticias2">
-
-        <div class="auto1"> <!-- div de primera noticia-->
-
-            <h3><a class="tam" href="">Animal2 Crossing versión 2.8</a></h3>
-            <div><img class="tam" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
-            <p>El juego en el que todos piensan </p><!--cambios-->
+            </div>
 
         </div>
 
-        <div  class="auto1"> <!-- div de primera noticia-->
-
-            <h3><a class="tam" href="">Pokemon Cristal</a></h3>
-            <div><img class="tam" src="image/pokemon.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
-            <p>El juego en el que todos piensan </p><!--cambios-->
-
-        </div>
-
-        <div class="auto1"> <!-- div de primera noticia-->
-
-            <h3><a class="tam" href="">Final Fantasy</a></h3>
-            <div><img class="tam" src="image/muñeco.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
-            <p>El juego en el que todos piensan </p><!--cambios-->
-
-        </div>
 
     </div>
+
 </div>
 
 
-
-<!-- div para seccion de noticias -->
-
-<div style="padding-top: 10%">
-    <div class="nostyle"> <!-- añadir padding a todos los div -->
-        <h2>Análisis Destacados</h2>
-    </div>
-
-    <div class="noticias" >
-        <div class="auto"> <!-- div de primera noticia-->
-
-            <h3><a href="">Animal Crossing versión 2.8</a></h3>
-            <div><img src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
-            <p >El juego en el que todos piensan </p>
-
-        </div>
-
-        <div class="auto2"> <!-- div de primera noticia-->
-
-            <h3><a href="">Animal2 Crossing versión 2.8</a></h3>
-            <div><img src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
-            <p>El juego en el que todos piensan </p><!--cambios-->
-
-        </div>
-
-
-
-
-
-    </div>
-
-    <div class="noticias2">
-
-        <div class="auto1"> <!-- div analisis-->
-
-            <h3><a class="tam" href="">Animal2 Crossing versión 2.8</a></h3>
-            <div><img class="tam" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
-            <p>El juego en el que todos piensan </p><!--cambios-->
-
-        </div>
-
-        <div id="centro" class="auto1"> <!-- div de primera noticia-->
-
-            <h3><a class="tam" href="">Animal2 Crossing versión 2.8</a></h3>
-            <div><img class="tam" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
-            <p>El juego en el que todos piensan </p><!--cambios-->
-
-        </div>
-
-        <div class="auto1"> <!-- div de primera noticia-->
-
-            <h3><a class="tam" href="">Animal2 Crossing versión 2.8</a></h3>
-            <div><img class="tam" src="image/animal.jpg" alt="foto de animal crossing"></div> <!--div para  imagen -->
-            <p>El juego en el que todos piensan </p><!--cambios-->
-
-        </div>
-
-    </div>
-</div>
 </div>
 </body>
 </html>
