cambios en estilos nuevas fotos y reestructuracion de la pag

--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
     </style>
 </head>
 <body>
-<ul class="nav">
-    <li><a href="">PS4</a></li>
-    <li><a href="">XBOX</a></li>
-    <li><a href="">PC</a></li>
-    <li><a href="">FORO</a></li>
+<div id="menu">
+    <ul class="nav">
+        <li><a href="">PS4</a></li>
+        <li><a href="">XBOX</a></li>
+        <li><a href="">PC</a></li>
+        <li><a href="">FORO</a></li>
 
-</ul>
-<div id="nav2">
+    </ul>
+
     <ul class="nav">
         <li><a href="">Noticias</a></li>
         <li><a href="">Analisis</a></li>
@@ -158,7 +159,7 @@
 
                 <div class="auto2">
 
-                    <h3><a href="">Battlefield</a></h3>
+                    <h3><a href="">Tekken</a></h3>
                     <img class="tamg" src="image/teken.jpg" alt="foto de animal crossing"><!--div para  imagen -->
                     <p>El juego en el que todos piensan </p>
                 </div>
@@ -173,37 +174,39 @@
                     <h3><a class="tam" href="">The Hunter</a></h3>
                     <div><img class="tam" src="image/hunter.jpg" alt="foto de animal crossing"></div>
                     <!--div para  imagen -->
-
+                    <p>El juego en el que todos piensan </p><!--cambios-->
 
                 </div>
 
                 <div class="auto1"> <!-- div de primera noticia-->
 
-                    <h3><a class="tam" href="">Pokemon Cristal</a></h3>
+                    <h3><a class="tam" href="">Player underground</a></h3>
                     <div><img class="tam" src="image/pubg.jpg" alt="foto de animal crossing"></div>
                     <!--div para  imagen -->
-
+                    <p>El juego en el que todos piensan </p><!--cambios-->
 
                 </div>
 
                 <div class="auto1"> <!-- div de primera noticia-->
 
-                    <h3><a class="tam" href="">Final Fantasy</a></h3>
+                    <h3><a class="tam" href="">Metroid</a></h3>
                     <div><img class="tam" src="image/futurista.jpg" alt="foto de animal crossing"></div>
                     <!--div para  imagen -->
-
+                    <p>El juego en el que todos piensan </p><!--cambios-->
 
                 </div>
 
             </div>
+
+
         </div>
     </div>
 
     <div><!--lateral-->
 
-        <div class="auto2" id="lateral">
+        <div id="lateral">
             <div class="auto2">
-                <h4> Ultimos Trucos</h4>
+                <h5 class="titulo"> Ultimos Trucos</h5>
                 <img src="image/pubg.jpg" alt="imagen de pubg">
                 <p>Desbloquear rifle </p>
             </div>
@@ -215,10 +218,16 @@
 
             <div class="auto2">
 
-                <h4 >Ultimos Logros</h4>
+                <h5 class="titulo">Ultimos Logros</h5>
 
                 <div>
-                    
+                    <img src="image/psp.jpg" alt="foto de consola">
+                    <p>Logro: Viejo pero sabio</p>
+                </div>
+
+                <div>
+                    <img class="tamg" src="image/coche.PNG" alt="carrera de coches">
+                    <p>Logro: Fast and Furious</p>
                 </div>
 
 
