--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="css1.css">
+    <link rel="stylesheet" href="logoStyle.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
@@ -16,14 +17,17 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
             integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
             crossorigin="anonymous"></script>
-    <style>
-
-
-    </style>
 </head>
 <body>
+<div id="designmodo" class="icon">
+    <div class="fbox">
+        <div class="design">Guia</div>
+        <div class="modo">Juegos</div>
+    </div>
+</div>
+
 <div id="menu">
-    <ul class="nav">
+    <ul  class="nav">
         <li><a href="">PS4</a></li>
         <li><a href="">XBOX</a></li>
         <li><a href="">PC</a></li>
@@ -40,10 +44,11 @@
         <li><a href="">Logros</a></li>
         <li><a href="">Trucos</a></li>
 
+
     </ul>
 </div>
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="margin-top: 8%">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="margin-top: 0%">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img class="d-block w-100" src="image/nintendo.jpg" width="800" height="430" alt="First slide">
@@ -82,11 +87,11 @@
     <div id="principal">
         <div>
             <div class="nostyle"> <!-- añadir padding a todos los div -->
-                <h2 style="padding-bottom: 3%">Últimas Noticias</h2>
+                <h2 class="titulillo" >Últimas Noticias</h2>
             </div>
 
             <div class="noticias">
-                <div id="izquierda">
+                <div  id="izquierda">
                     <div class="auto"> <!-- div de primera noticia-->
 
                         <h3><a href="">Disney compra 21 fox</a></h3>
@@ -144,7 +149,7 @@
 
         <div style="padding-top: 5%">
             <div class="nostyle"> <!-- añadir padding a todos los div -->
-                <h2 style="padding-bottom: 2%">Análisis Destacados</h2>
+                <h2 class="titulillo" ">Análisis Destacados</h2>
             </div>
 
             <div class="noticias">
