ranking de usuarios y seguumos con la principal

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </ul>
 
     <ul class="nav">
-        <li><a href="">Noticias</a></li>
+        <li><a  href="">Noticias</a></li>
         <li><a href="">Analisis</a></li>
-        <li><a href="">Ranking</a></li>
+        <li><a href="ranking.html">Ranking</a></li>
         <li><a href="">Guias</a></li>
         <li><a href="">Eventos</a></li>
         <li><a href="">Logros</a></li>
