--- a/ranking.html
+++ b/ranking.html
@@ -20,8 +20,8 @@
 <body>
 <div id="designmodo" class="icon">
     <div class="fbox">
-        <div class="design">Guia</div>
-        <div class="modo">Juegos</div>
+        <div class="design"><a id="blanco" href="index.html">Guia</a></div>
+        <div class="modo"><a id="orange" href="index.html">Juegos</a></div>
     </div>
 </div>
 
@@ -49,7 +49,7 @@
 <div id="contenido">
 <div class="container">
 
-    <h2 id="ranking">Ranking de Usuarios</h2>
+    <h2 class="ranking">Ranking de Usuarios</h2>
 
     <div>
         <ul class="nav" id="ranking">
