intento de formulario 1 con js

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li><a href="ranking.html">Ranking</a></li>
         <li><a href="">Guias</a></li>
         <li><a href="">Eventos</a></li>
-        <li><a href="">Logros</a></li>
+        <li><a href="formularios.html">Logros</a></li>
         <li><a href="">Trucos</a></li>
 
 
