--- a/formularios.html
+++ b/formularios.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="logoStyle.css">
     <link rel="stylesheet" href="style.css">
     <script type=\"text/javascript\" src=\"http://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js\"></script>
-    <script src="js/form-validation.js"></script>
+    <script src="form-validation.js"></script>
+    <script type="form-validation.js"></script>
 
 </head>
 <body>
@@ -39,52 +40,145 @@
 
 
     </ul>
+
     <div id="contenido">
-        <div style="width: 800px height:500px" class="container">
 
-            <h2 class="ranking">Create una cuenta ¡YA!</h2>
 
-            <div id="formul">
-                <form name="myForm">
-                    <label>Nombre:</label>
-                    <div class="input">
-                        <input type="text"><br>
-                    </div>
-                    <label> Contraseña:</label>
-                    <div class="input">
-                        <input class="input" type="password" name="userPass" onkeyup="validate()" required>
-                        <h7 id="mylocation"></h7>
-                    </div>
 
-                    <label>Fecha de nacimiento</label>
-                    <div class="input">
-                        <input type="date" required><br>
-                    </div>
+        <div id="wrapper">
+            <h2>¡Registrate YA!</h2>
+            <form  action="index.html" onsubmit="return Validate()" name="vform">
+                <div id="username_div">
+                    <label>Nick</label> <br>
+                    <input type="text" name="username" class="textInput" placeholder="Nick">
+                    <div id="name_error"></div>
+                </div>
+                <div id="email_div">
+                    <label>Email</label> <br>
+                    <input type="email" name="email" class="textInput" placeholder="email@hotmail.com">
+                    <div id="email_error"></div>
+                </div>
+                <div id="password_div">
+                    <label>Password</label> <br>
+                    <input type="password" name="password" class="textInput" placeholder="******">
+                </div>
+                <div id="pass_confirm_div">
+                    <label>Password confirm</label> <br>
+                    <input type="password" name="password_confirm" class="textInput" placeholder="******">
+                    <div id="password_error"></div>
+                </div>
+                <div>
+                    <input type="checkbox" name="terminos" value="terminos" required> Acepto Terminos y Condiciones
+                </div>
+                <div>
+                    <input type="submit" name="register" value="Registrarse" class="btn">
+                </div>
 
-                    <label>Nick: </label>
-                    <div class="input">
-                        <input type="text" name="nick" onkeyup="validateName()  " required><br>
-                        <h7 id="myNick"></h7>
-                    </div>
-                    <label> Ciudad:</label>
-                    <div class="input">
-                        <input type="text"><br>
-                    </div>
-                    <label>Email:</label>
-                    <div class="input">
-                        <input required type="email"><br>
-                    </div>
-                    <div >
-                        <input type="submit">
-                    </div>
-                </form>
-
-            </div>
+            </form>
         </div>
     </div>
+
+</div>
 </div>
 </div>
 
 
 </body>
 </html>
+<script type="text/javascript">
+    var username = document.forms['vform']['username'];
+    var email = document.forms['vform']['email'];
+    var password = document.forms['vform']['password'];
+    var password_confirm = document.forms['vform']['password_confirm'];
+
+
+    var name_error = document.getElementById('name_error');
+    var email_error = document.getElementById('email_error');
+    var password_error = document.getElementById('password_error');
+
+    username.addEventListener('blur', nameVerify, true);
+    email.addEventListener('blur', emailVerify, true);
+    password.addEventListener('blur', passwordVerify, true);
+
+    // js validacion
+    //control de los campos
+    function Validate() {
+
+        if (username.value == "") {
+            username.style.border = "1px solid red";
+            document.getElementById('username_div').style.color = "red";
+            name_error.textContent = "Username is required";
+            username.focus();
+            return false;
+        }
+
+        if (username.value.length < 6) {
+            username.style.border = "1px solid red";
+            document.getElementById('username_div').style.color = "red";
+            name_error.textContent = "El nick debe tener al menos 5 caracteres";
+            username.focus();
+            return false;
+        }
+
+        if (email.value == "") {
+            email.style.border = "1px solid red";
+            document.getElementById('email_div').style.color = "red";
+            email_error.textContent = "Es necesario introducir un correo";
+            email.focus();
+            return false;
+        }
+
+        if (password.value == "") {
+            password.style.border = "1px solid red";
+            document.getElementById('password_div').style.color = "red";
+            password_confirm.style.border = "1px solid red";
+            password_error.textContent = "Debe introducir una contraseña";
+            password.focus();
+            return false;
+        }
+
+        if (password.value != password_confirm.value) {
+            password.style.border = "1px solid red";
+            document.getElementById('pass_confirm_div').style.color = "red";
+            password_confirm.style.border = "1px solid red";
+            password_error.innerHTML = "Las dos contraseñas deben coincidir";
+            return false;
+        }
+    }
+
+    function nameVerify() {
+        if (username.value != "") {
+            username.style.border = "1px solid grey ";
+            document.getElementById('username_div').style.color = "grey";
+            name_error.innerHTML = "";
+            return true;
+        }
+
+
+    }
+    function emailVerify() {
+        if (email.value != "") {
+            email.style.border = "1px solid grey";
+            document.getElementById('email_div').style.color = "grey";
+            email_error.innerHTML = "";
+            return true;
+        }
+    }
+    function passwordVerify() {
+        if (password.value != "") {
+            password.style.border = "1px solid grey";
+            document.getElementById('pass_confirm_div').style.color = "grey";
+            document.getElementById('password_div').style.color = "grey";
+            password_error.innerHTML = "";
+            return true;
+        }
+        if (password.value === password_confirm.value) {
+            password.style.border = "1px solid grey";
+            document.getElementById('pass_confirm_div').style.color = "grey";
+            password_error.innerHTML = "";
+            return true;
+        }
+    }
+
+
+</script>
