arreglos del navbar y registro

--- a/ranking.html
+++ b/ranking.html
@@ -42,6 +42,7 @@
         <li><a href="">Eventos</a></li>
         <li><a href="">Logros</a></li>
         <li><a href="">Trucos</a></li>
+        <li><a href="formularios.html">¡Únete!</a><li>
 
 
     </ul>
@@ -102,6 +103,5 @@
 </body>
 </html>
 
-</body>
 
-</html>
+
