--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Indice</title>
+    <!-- responsive-->
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=yes">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
+    <!--end responsive-->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -43,6 +48,7 @@
         <li><a href="">Eventos</a></li>
         <li><a href="formularios.html">Logros</a></li>
         <li><a href="">Trucos</a></li>
+        <li><a href="formularios.html">Registrate</a><li>
 
 
     </ul>
@@ -231,7 +237,7 @@
                 </div>
 
                 <div>
-                    <img class="tamg" src="image/coche.PNG" alt="carrera de coches">
+                    <img class="tamg" src="image/Coche.PNG" alt="carrera de coches">
                     <p>Logro: Fast and Furious</p>
                 </div>
 
