--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Indice</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- responsive-->
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -44,7 +45,7 @@
         <li><a href="">Noticias</a></li>
         <li><a href="">Analisis</a></li>
         <li><a href="ranking.html">Ranking</a></li>
-        <li><a href="">Guias</a></li>
+        <li><a href="Guides.html">Guias</a></li>
         <li><a href="">Eventos</a></li>
         <li><a href="formularios.html">Logros</a></li>
         <li><a href="">Trucos</a></li>
