Prototipo de guias

--- a/ranking.html
+++ b/ranking.html
@@ -42,7 +42,7 @@
         <li><a href="">Eventos</a></li>
         <li><a href="">Logros</a></li>
         <li><a href="">Trucos</a></li>
-        <li><a href="formularios.html">¡Únete!</a><li>
+        <li><a href="formularios.html">¡Registrate!</a><li>
 
 
     </ul>
