casi acabado falta corregir detalles y adjuntar la ultima a este estilo

--- a/formularios.html
+++ b/formularios.html
@@ -35,7 +35,7 @@
         <li><a href="">Noticias</a></li>
         <li><a href="">Analisis</a></li>
         <li><a href="ranking.html">Ranking</a></li>
-        <li><a href="">Guias</a></li>
+        <li><a href="Guides.html">Guias</a></li>
         <li><a href="">Eventos</a></li>
         <li><a href="formularios.html">Logros</a></li>
         <li><a href="">Trucos</a></li>
