--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <li><a href="">Eventos</a></li>
         <li><a href="formularios.html">Logros</a></li>
         <li><a href="">Trucos</a></li>
-        <li><a href="formularios.html">Registrate</a><li>
+        <li><a href="formularios.html">Registrate</a>
+        <li>
 
 
     </ul>
@@ -271,7 +272,7 @@
                                 <img class="ranking" src="image/usuario.jpg">Nicky
                                 <div class="dropdown-content">
                                     <img src="image/usuario.jpg" width=100 height=100 alt="">
-                                    <div class="desc"> <h6>Nicky</h6>
+                                    <div class="desc"><h6>Nicky</h6>
                                         <h6> Bio: le gusta jugar al tennis</h6>
 
                                     </div>
@@ -287,17 +288,18 @@
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td><div class="dropdown">
-                            <img class="ranking" src="image/usuario.jpg">Mickey
-                            <div class="dropdown-content">
-                                <img src="image/usuario.jpg" width=100 height=100 alt="">
-                                <div class="desc"> <h6>Mickey</h6>
-                                    <h6> Bio: le gusta jugar al tennis</h6>
+                        <td>
+                            <div class="dropdown">
+                                <img class="ranking" src="image/usuario.jpg">Mickey
+                                <div class="dropdown-content">
+                                    <img src="image/usuario.jpg" width=100 height=100 alt="">
+                                    <div class="desc"><h6>Mickey</h6>
+                                        <h6> Bio: le gusta jugar al tennis</h6>
+
+                                    </div>
 
                                 </div>
-
                             </div>
-                        </div>
 
                         </td>
 
