--- a/Guides.html
+++ b/Guides.html
@@ -49,94 +49,201 @@
     </ul>
 </div>
 
-<div id="contenido">
-    <div class="container">
+<div id="">
 
-        <h2 class="ranking">Guias</h2>
-        <div>
-        <div id="principal">
-            <form id="Genero" action="">
-                <select name="Genero">
-                    <option value="Accion">Accion</option>
-                    <option value="Ciencia Ficcion">Ciencia Ficcion</option>
-                    <option value="Misterio">Misterio</option>
-                    <option value="Deportes">Deportes</option>
-                </select>
-                <br><br>
+    <div id="contenido" class="container">
 
-            </form>
-        </div>
+            <div  id="principal">
+                <h2  style="margin-left: 30%" class="ranking">Guías</h2>
 
-        <div id="menu1">
-            <ul class="nav">
-                <li class="enlaces"><a href="">A</a></li>
-                <li class="enlaces"><a href="">B</a></li>
-                <li class="enlaces"><a href="">C</a></li>
-                <li class="enlaces"><a href="">D</a></li>
-                <li class="enlaces"><a href="">E</a></li>
-                <li class="enlaces"><a href="">F</a></li>
-                <li class="enlaces"><a href="">G</a></li>
-                <li class="enlaces"><a href="">H</a></li>
-                <li class="enlaces"><a href="">I</a></li>
-                <li class="enlaces"><a href="">J</a></li>
-                <li class="enlaces"><a href="">K</a></li>
-                <li class="enlaces"><a href="">L</a></li>
-                <li class="enlaces"><a href="">M</a></li>
-                <li class="enlaces"><a href="">N</a></li>
-                <li class="enlaces"><a href="">O</a></li>
-                <li class="enlaces"><a href="">P</a></li>
-                <li class="enlaces"><a href="">Q</a></li>
-                <li class="enlaces"><a href="">R</a></li>
-                <li class="enlaces"><a href="">S</a></li>
-                <li class="enlaces"><a href="">T</a></li>
-                <li class="enlaces"><a href="">U</a></li>
-                <li class="enlaces"><a href="">V</a></li>
-                <li class="enlaces"><a href="">W</a></li>
-                <li class="enlaces"><a href="">X</a></li>
-                <li class="enlaces"><a href="">Y</a></li>
-                <li class="enlaces"><a href="">Z</a></li>
+                <form id="Genero" action="">
 
-            </ul>
-        </div>
-            <table id="espaciado" class="table table-striped">
-                <thead>
-                <tr style="background-color: cornflowerblue">
+                    <select name="Genero">
+                        <option value="Accion">Accion</option>
+                        <option value="Ciencia Ficcion">Ciencia Ficcion</option>
+                        <option value="Misterio">Misterio</option>
+                        <option value="Deportes">Deportes</option>
+                    </select>
+                    <br><br>
+
+                </form>
 
 
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
+                <div id="menu1">
+                    <ul class="nav">
+                        <li class="enlaces"><a href="">A</a></li>
+                        <li class="enlaces"><a href="">B</a></li>
+                        <li class="enlaces"><a href="">C</a></li>
+                        <li class="enlaces"><a href="">D</a></li>
+                        <li class="enlaces"><a href="">E</a></li>
+                        <li class="enlaces"><a href="">F</a></li>
+                        <li class="enlaces"><a href="">G</a></li>
+                        <li class="enlaces"><a href="">H</a></li>
+                        <li class="enlaces"><a href="">I</a></li>
+                        <li class="enlaces"><a href="">J</a></li>
+                        <li class="enlaces"><a href="">K</a></li>
+                        <li class="enlaces"><a href="">L</a></li>
+                        <li class="enlaces"><a href="">M</a></li>
+                        <li class="enlaces"><a href="">N</a></li>
+                        <li class="enlaces"><a href="">O</a></li>
+                        <li class="enlaces"><a href="">P</a></li>
+                        <li class="enlaces"><a href="">Q</a></li>
+                        <li class="enlaces"><a href="">R</a></li>
+                        <li class="enlaces"><a href="">S</a></li>
+                        <li class="enlaces"><a href="">T</a></li>
+                        <li class="enlaces"><a href="">U</a></li>
+                        <li class="enlaces"><a href="">V</a></li>
+                        <li class="enlaces"><a href="">W</a></li>
+                        <li class="enlaces"><a href="">X</a></li>
+                        <li class="enlaces"><a href="">Y</a></li>
+                        <li class="enlaces"><a href="">Z</a></li>
 
-                    <td><img class="imagui" src="image/futucoche.jpg" ></td>
-                    <td>3000</td>
-                </tr>
-                <tr>
+                    </ul>
+                </div>
+                <table id="espaciado" class="table table-striped">
 
-                    <td> <img class="imagui" src="image/edge.jpg" alt=""></td>
+                    <tbody>
+                    <tr>
+                        <div class="pegar">
+                            <div>
+                                <td class="position">
+                                    <div><img class="imagui" src="image/mariocar.jpg" alt=""></div>
+                                    <div class="texto"><a class="texto" href="">Mario Car 8: Grand Prix</a><br>
+                                        <a>Coches</a><br>
+                                        <a>17 trofeos</a>
+                                        <ul class="texto">
+                                            <li class="texto"> Colaboradores:</li>
+                                            <li class="texto"><a href="">Mike45</a></li>
+                                            ,
+                                            <li class="texto"><a href="">Exposito</a></li>
+                                        </ul>
+                                    </div>
 
-                    <td>2000</td>
-                </tr>
-                <tr>
 
-                    <td><img class="imagui" id="imagui" src="image/mariocar.jpg"></td>
-                    <td>1000</td>
-                </tr>
+                                </td>
+                            </div>
+                        </div>
+                    </tr>
+                    <tr>
 
-                <tr>
+                        <td class="position">
+                            <div><img class="imagui" src="image/edge.jpg" alt=""></div>
+                            <div class="texto"><a class="texto" href="">Mirror's Edges: Final</a><br>
+                                <a>Accion</a><br>
+                                <a>42 trofeos</a>
+                                <ul class="texto">
+                                    <li class="texto"> Colaboradores:</li>
+                                    <li class="texto"><a href="">Mike45</a></li>
+                                    ,
+                                    <li class="texto"><a href="">Exposito</a></li>
+                                </ul>
+                            </div>
 
 
-                    <td><img class="imagui" src="image/punchman.jpg"></td>
-                    <td>500</td>
-                </tr>
+                        </td>
 
-                <tr>
+                    </tr>
+                    <tr>
 
-                    <td><img class="imagui" src="image/battlefront.jpg"></td>
-                    <td>400</td>
-                </tr>
-                </tbody>
-            </table>
+                        <td class="position">
+                            <div><img class="imagui" src="image/futucoche.jpg" alt=""></div>
+                            <div class="texto"><a class="texto" href="">Fast Red</a><br>
+                                <a>Coches</a><br>
+                                <a>11 trofeos</a>
+                                <ul class="texto">
+                                    <li class="texto"> Colaboradores:</li>
+                                    <li class="texto"><a href="">Mike45</a></li>
+                                    ,
+                                    <li class="texto"><a href="">Exposito</a></li>
+                                </ul>
+                            </div>
+
+
+                        </td>
+
+                    </tr>
+
+                    <tr>
+
+
+                        <td class="position">
+                            <div><img class="imagui" src="image/punchman.jpg" alt=""></div>
+                            <div class="texto"><a class="texto" href="">Punchman Revolution</a><br>
+                                <a>Peleas</a><br>
+                                <a>5 trofeos</a>
+                                <ul class="texto">
+                                    <li class="texto"> Colaboradores:</li>
+                                    <li class="texto"><a href="">Mike45</a></li>
+                                    ,
+                                    <li class="texto"><a href="">Exposito</a></li>
+                                </ul>
+                            </div>
+
+
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td class="position">
+                            <div><img class="imagui" src="image/battlefront.jpg" alt=""></div>
+                            <div class="texto"><a class="texto" href="">Battlefront: Last Empire</a><br>
+                                <a>Disparos</a><br>
+                                <a>25 trofeos</a>
+                                <ul class="texto">
+                                    <li class="texto"> Colaboradores:</li>
+                                    <li class="texto"><a href="">Mike45</a></li>
+                                    ,
+                                    <li class="texto"><a href="">Exposito</a></li>
+                                </ul>
+                            </div>
+
+
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        <div><!--lateral-->
+
+            <div  style="margin-top: 50%" id="lateral">
+                <div class="auto2">
+                    <h5 class="titulo"> Mas Recientes</h5>
+                    <img src="image/bloodborne.jpg" alt="Blood Borne">
+                    <a class="auto1" href=""> Nuevo jefe para BloodBorne </a>
+                </div>
+
+                <div class="auto2">
+                    <img src="image/bluedragon.jpg" alt="blue dragon">
+                    <a class="auto1" href=""> Blue dragon el poder del fuego.</a>
+                </div>
+
+                <div class="auto2">
+
+
+
+                    <div>
+                        <img src="image/starwars.jpg" alt="foto de consola">
+                        <a class="auto1" href="">Los secretos tras Star Wars</a>
+                    </div>
+
+                    <div>
+                        <img class="tamg" src="image/sega.jpg" alt="Sega">
+                        <a class="auto1" href="">Posible nuevo juego para Sega</a>
+                    </div>
+
+
+                </div>
+
+
+
+            </div>
+
+            <div>
+
+            </div>
+
+
         </div>
     </div>
 </div>
