--- a/ranking.html
+++ b/ranking.html
@@ -38,7 +38,7 @@
         <li><a href="">Noticias</a></li>
         <li><a href="">Analisis</a></li>
         <li><a href="ranking.html">Ranking</a></li>
-        <li><a href="">Guias</a></li>
+        <li><a href="Guides.html">Guias</a></li>
         <li><a href="">Eventos</a></li>
         <li><a href="">Logros</a></li>
         <li><a href="">Trucos</a></li>
